<resources>
    <string name="app_name">QuizMe</string>
    <string name="quiz_me">QUIZ ME!!!</string>
    <string name="account">Do not have an account? <font color='#5b39c6'> SignUp</font></string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="sign_in">Sign In</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="Email">E-mail</string>
    <string name="Password">Password</string>
    <string name="sign_up">sign up</string>
    <string name="Re_enterEmail">Enter your E-mail</string>
    <string name="Continue">Continue</string>
    <string name="sign_out">Sign Out</string>
    <string name="start_quiz">Start quiz</string>
    <string name="wrong_answers">Wrong Answers:</string>
    <string name="correct_answers">Correct Answers:</string>
    <string name="CA_0">0</string>
    <string name="time">Time:</string>
    <string name="_60">60</string>
    <string name="WA_0">0</string>
    <string name="Qtextview">TextView</string>
    <string name="Atextview">TextView</string>
    <string name="Btextview">TextView</string>
    <string name="Ctextview">TextView</string>
    <string name="Dtextview">TextView</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="todo">TODO</string>
    <string name="title_activity_nav_activity">Nav_activity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>