<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lightpurple"
    tools:context=".Quiz_page">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginEnd="15dp"
        android:text="@string/wrong_answers"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewWrong"
        app:layout_constraintEnd_toEndOf="@+id/textViewQuestion" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="23dp"
        android:text="@string/correct_answers"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewCorrect"
        app:layout_constraintStart_toEndOf="@+id/textViewTime" />

    <TextView
        android:id="@+id/textViewCorrect"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="21dp"
        android:text="@string/CA_0"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="30dp"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewTime"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="21dp"
        android:text="@string/_60"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewWrong"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:text="@string/WA_0"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:background="@color/white"
        android:text="@string/Qtextview"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="49dp" />

    <TextView
        android:id="@+id/textViewA"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/white"
        android:text="@string/Atextview"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewD"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:background="@color/white"
        android:text="@string/Dtextview"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewC" />

    <TextView
        android:id="@+id/textViewC"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="30dp"
        android:background="@color/white"
        android:text="@string/Ctextview"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewB" />

    <TextView
        android:id="@+id/textViewB"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="30dp"
        android:background="@color/white"
        android:text="@string/Btextview"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewA" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="35dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="@+id/buttonFinish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonFinish" />

    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="39dp"
        android:layout_marginBottom="74dp"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>