<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lightpurple"
    tools:context=".login_page">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="125dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/progressBarSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/quizneonsign_126219629" />

    <EditText
        android:id="@+id/editTextLoginEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progressBarSignIn" />

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="29dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/buttonloginSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarSignIn" />

    <Button
        android:id="@+id/buttonloginSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:text="@string/sign_in"
        android:enabled="true"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginPassword" />

    <ProgressBar
        android:id="@+id/progressBarSignIn"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/editTextLoginPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextLoginEmail"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/editTextLoginEmail"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="18dp"
        android:text="@string/or"
        app:layout_constraintBottom_toTopOf="@+id/buttonLoginGoogleSignIn"
        app:layout_constraintStart_toStartOf="@+id/buttonloginSignIn"
        app:layout_constraintTop_toBottomOf="@+id/buttonloginSignIn" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/buttonLoginGoogleSignIn"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal"
        android:backgroundTintMode="add"
        app:buttonSize="icon_only"
        app:layout_constraintBottom_toTopOf="@+id/textViewLoginSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textViewLoginSignUp"
        android:layout_width="241dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:text="@string/account"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewLoginForgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginGoogleSignIn" />

    <TextView
        android:id="@+id/textViewLoginForgotPassword"
        android:layout_width="237dp"
        android:layout_height="0dp"
        android:layout_marginBottom="42dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoginSignUp" />


</androidx.constraintlayout.widget.ConstraintLayout>