<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lightpurple"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="55dp"
                android:layout_marginBottom="43dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toTopOf="@+id/buttonStartQuiz"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/quiz_neon_sign_1262_19629" />

            <Button
                android:id="@+id/buttonStartQuiz"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginBottom="27dp"
                android:text="@string/start_quiz"
                app:layout_constraintBottom_toTopOf="@+id/buttonSignOut"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            <Button
                android:id="@+id/buttonSignOut"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginBottom="108dp"
                android:text="@string/sign_out"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonStartQuiz" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>
